--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -24,73 +24,120 @@ li{list-style:none}
 
 /* ---- base ---- */
 
-html,body{ 
-	width:100%;
-	height:100%;
-	background:#111;
-}
-
-html{
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
 
 body{
-  font:normal 75% Arial, Helvetica, sans-serif;
+    padding: 0;
+    margin: 0;
 }
 
 canvas{
-  display:block;
-  vertical-align:bottom;
+    display:block;
+    vertical-align:bottom;
 }
+
+h1{
+    font-size: $h1_size;
+    @include headerTitle();
+}
+h2{
+    font-size: $h2_size;
+    @include headerTitle();
+}
+
+
+
+/* ---- Header ---- */
+
+header{
+    height: 90vh;
+
+    .nombre{
+        color: $white;
+        padding: 2em 0;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: $header_bg;
+    }
+}
+
+
+/* ---- Navbar ---- */
+
+.navbar{
+    margin-bottom: 0;
+    height: 2em;
+    .nav{
+        li{
+            a{
+                color: $color-primary-2;
+                font-size: $a_size;
+                font-weight: bold;
+                &:hover, &:active{
+                    color: $color-primary-2;
+                    background-color: $header_bg;
+                }
+            }
+        }
+    }
+}
+
+.navbar-default {
+    background-color: #1f1919;
+    border-color: transparent;
+}
+
+
 
 
 /* ---- stats.js ---- */
 
 .count-particles{
-  background: #000022;
-  position: absolute;
-  top: 48px;
-  left: 0;
-  width: 80px;
-  color: #13E8E9;
-  font-size: .8em;
-  text-align: left;
-  text-indent: 4px;
-  line-height: 14px;
-  padding-bottom: 2px;
-  font-family: Helvetica, Arial, sans-serif;
-  font-weight: bold;
+    background: #000022;
+    position: absolute;
+    top: 48px;
+    left: 0;
+    width: 80px;
+    color: #13E8E9;
+    font-size: .8em;
+    text-align: left;
+    text-indent: 4px;
+    line-height: 14px;
+    padding-bottom: 2px;
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: bold;
 }
 
 .js-count-particles{
-  font-size: 1.1em;
+    font-size: 1.1em;
 }
 
 #stats,
 .count-particles{
-  -webkit-user-select: none;
-  margin-top: 5px;
-  margin-left: 5px;
+    -webkit-user-select: none;
+    margin-top: 5px;
+    margin-left: 5px;
 }
 
 #stats{
-  border-radius: 3px 3px 0 0;
-  overflow: hidden;
+    border-radius: 3px 3px 0 0;
+    overflow: hidden;
 }
 
 .count-particles{
-  border-radius: 0 0 3px 3px;
+    border-radius: 0 0 3px 3px;
 }
-
 
 /* ---- particles.js container ---- */
 
 #particles-js{
-  width: 100%;
-  height: 100%;
-  background-color: rgba(14, 12, 13, 0.7);
-  background-image: url('');
-  background-size: cover;
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
+    width: 100%;
+    height: 90vh;
+    background-color: $color-primary-1;
+    background-image: url('');
+    background-size: cover;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    position: relative;
 }
