--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -29,13 +29,17 @@ $rgba-primary-4: rgba(126, 0, 25, 1);
 // Other colors */
 
 $white: whitesmoke;
+$navbar_bg: #1f1919;
 $header_bg: rgba(192, 8, 45, 0.7);
 
 
 
 // Font Size */
 
-$h1_size: 60px;
-$h2_size: 30px;
+$h1_size: 4em;
+$h2_size: 2em;
+$h3_size: 2.5em;
+$h4_size: 1.2em;
 
-$a_size: 16px;
+$p_size: 1.2em;
+$a_size: 1em;
