--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -28,6 +28,7 @@ li{list-style:none}
 body{
     padding: 0;
     margin: 0;
+    background-color: $color-primary-0;
 }
 
 canvas{
@@ -43,13 +44,25 @@ h2{
     font-size: $h2_size;
     @include headerTitle();
 }
-
+h3{
+    font-size: $h3_size;
+    font-weight: 600;
+    @include paddingSectionTitle();
+}
+h4{
+    font-size: $h4_size;
+    padding: 1em 0;
+}
+p{
+    font-size: $p_size;
+    padding: .5em;
+}
 
 
 /* ---- Header ---- */
 
 header{
-    height: 90vh;
+    height: 100vh;
 
     .nombre{
         color: $white;
@@ -84,10 +97,32 @@ header{
 }
 
 .navbar-default {
-    background-color: #1f1919;
+    background-color: $navbar_bg;
     border-color: transparent;
 }
 
+
+
+/* ---- About Section ---- */
+#about{
+    color: $color-primary-2;
+    background-color: $color-primary-4;
+    @include paddingSection();
+    .statement-container{
+        @include paddingInsideSection();
+        #statement{
+            padding: 2em;
+        }
+        #badges{
+            @extend #statement;
+        }
+    }
+    .img-container{
+        @include paddingInsideSection();
+        padding-top: 3em;
+        padding-bottom: 3em;
+    }
+}
 
 
 
@@ -133,7 +168,7 @@ header{
 
 #particles-js{
     width: 100%;
-    height: 90vh;
+    height: 100vh;
     background-color: $color-primary-1;
     background-image: url('');
     background-size: cover;
