--- a/assets/sass/_mixin.scss
+++ b/assets/sass/_mixin.scss
@@ -2,3 +2,17 @@
 	color: $white;
 	padding: 10px;
 }
+
+@mixin paddingSectionTitle(){
+	padding: 1em;
+}
+
+@mixin paddingSection(){
+	padding-top: 3em;
+	padding-bottom: 3em;
+}
+
+@mixin paddingInsideSection(){
+	padding-left: 2em;
+	padding-right: 2em;
+}
