--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -1,6 +1,6 @@
 /* =============================================================================
-   HTML5 CSS Reset Minified - Eric Meyer
-   ========================================================================== */
+	HTML5 CSS Reset Minified - Eric Meyer
+	========================================================================== */
 
 html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent}
 body{line-height:1}
@@ -19,160 +19,178 @@ li{list-style:none}
 
 
 /* =============================================================================
-   My CSS
-   ========================================================================== */
+	My CSS
+	========================================================================== */
 
 /* ---- base ---- */
-
-
 body{
-    padding: 0;
-    margin: 0;
-    background-color: $color-primary-0;
+	padding: 0;
+	margin: 0;
+	background-color: $color-primary-0;
 }
 
 canvas{
-    display:block;
-    vertical-align:bottom;
+	display:block;
+	vertical-align:bottom;
 }
 
 h1{
-    font-size: $h1_size;
-    @include headerTitle();
+	font-size: $h1_size;
+	@include headerTitle();
 }
 h2{
-    font-size: $h2_size;
-    @include headerTitle();
+	font-size: $h2_size;
+	@include headerTitle();
 }
 h3{
-    font-size: $h3_size;
-    font-weight: 600;
-    @include paddingSectionTitle();
+	font-size: $h3_size;
+	font-weight: 600;
+	@include paddingSectionTitle();
 }
 h4{
-    font-size: $h4_size;
-    padding: 1em 0;
+	font-size: $h4_size;
+	padding: 1em 0;
 }
 p{
-    font-size: $p_size;
-    padding: .5em;
+	font-size: $p_size;
+	padding: .5em;
 }
 
 
 /* ---- Header ---- */
-
 header{
-    height: 100vh;
+	height: 100vh;
 
-    .nombre{
-        color: $white;
-        padding: 2em 0;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        background-color: $header_bg;
-    }
+	.nombre{
+		color: $white;
+		padding: 2em 0;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		background-color: $header_bg;
+	}
 }
 
 
 /* ---- Navbar ---- */
-
 .navbar{
-    margin-bottom: 0;
-    height: 2em;
-    .nav{
-        li{
-            a{
-                color: $color-primary-2;
-                font-size: $a_size;
-                font-weight: bold;
-                &:hover, &:active{
-                    color: $color-primary-2;
-                    background-color: $header_bg;
-                }
-            }
-        }
-    }
+	margin-bottom: 0;
+	height: 2em;
+	.nav{
+		li{
+			a{
+				color: $color-primary-2;
+				font-size: $a_size;
+				font-weight: bold;
+				&:hover, &:active{
+					color: $color-primary-2;
+					background-color: $header_bg;
+				}
+			}
+		}
+	}
 }
 
 .navbar-default {
-    background-color: $navbar_bg;
-    border-color: transparent;
+	background-color: $navbar_bg;
+	border-color: transparent;
 }
 
 
 
 /* ---- About Section ---- */
 #about{
-    color: $color-primary-2;
-    background-color: $color-primary-4;
-    @include paddingSection();
-    .statement-container{
-        @include paddingInsideSection();
-        #statement{
-            padding: 2em;
-        }
-        #badges{
-            @extend #statement;
-        }
-    }
-    .img-container{
-        @include paddingInsideSection();
-        padding-top: 3em;
-        padding-bottom: 3em;
-    }
+	color: $color-primary-2;
+	background-color: $color-primary-4;
+	@include paddingSection();
+	.statement-container{
+		@include paddingInsideSection();
+		#statement{
+			padding: 2em;
+		}
+		#badges{
+			@extend #statement;
+			img{
+				width: 100px;
+				color: $white;
+			}
+		}
+	}
+	.img-container{
+		@include paddingInsideSection();
+		padding-top: 3em;
+		padding-bottom: 3em;
+	}
 }
 
+
+
+/* ---- Skills Section ---- */
+#skills{
+	color: $color-primary-3;
+	/* background-color:*/
+	@include paddingSection();
+	.devicon-container{
+		@include paddingInsideVertical();
+		i{
+			font-size: 6em;
+			color: $color-primary-2;
+			padding: 30px;
+			&:hover{
+				color: $color-primary-4;
+			}
+		}
+	}
+}
 
 
 /* ---- stats.js ---- */
-
 .count-particles{
-    background: #000022;
-    position: absolute;
-    top: 48px;
-    left: 0;
-    width: 80px;
-    color: #13E8E9;
-    font-size: .8em;
-    text-align: left;
-    text-indent: 4px;
-    line-height: 14px;
-    padding-bottom: 2px;
-    font-family: Helvetica, Arial, sans-serif;
-    font-weight: bold;
+	background: #000022;
+	position: absolute;
+	top: 48px;
+	left: 0;
+	width: 80px;
+	color: #13E8E9;
+	font-size: .8em;
+	text-align: left;
+	text-indent: 4px;
+	line-height: 14px;
+	padding-bottom: 2px;
+	font-family: Helvetica, Arial, sans-serif;
+	font-weight: bold;
 }
 
 .js-count-particles{
-    font-size: 1.1em;
+	font-size: 1.1em;
 }
 
 #stats,
 .count-particles{
-    -webkit-user-select: none;
-    margin-top: 5px;
-    margin-left: 5px;
+	-webkit-user-select: none;
+	margin-top: 5px;
+	margin-left: 5px;
 }
 
 #stats{
-    border-radius: 3px 3px 0 0;
-    overflow: hidden;
+	border-radius: 3px 3px 0 0;
+	overflow: hidden;
 }
 
 .count-particles{
-    border-radius: 0 0 3px 3px;
+	border-radius: 0 0 3px 3px;
 }
 
-/* ---- particles.js container ---- */
 
+/* ---- particles.js container ---- */
 #particles-js{
-    width: 100%;
-    height: 100vh;
-    background-color: $color-primary-1;
-    background-image: url('');
-    background-size: cover;
-    background-position: 50% 50%;
-    background-repeat: no-repeat;
-    position: relative;
+	width: 100%;
+	height: 100vh;
+	background-color: $color-primary-1;
+	background-image: url('');
+	background-size: cover;
+	background-position: 50% 50%;
+	background-repeat: no-repeat;
+	position: relative;
 }
