--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -1,13 +1,13 @@
 // SASS style sheet */
 // Palette color codes */
-// Palette URL: http://paletton.com/#uid=15v0t0kllll3u4scazquApWVGgY */
+// Palette URL: http://paletton.com/#uid=15v0t0kllll3u4s9fSJuApWVGgY */
 
 
 // As hex codes */
 
 $color-primary-0: #9E3549;	// Main Primary color */
 $color-primary-1: #211D1E; /*negro*/
-$color-primary-2: #EF94A6; /*rosa claro*/
+$color-primary-2: #FAB2C0; /*rosa claro*/
 $color-primary-3: #C0082D; /*fucsia*/
 $color-primary-4: #7E0019; /*fucsia oscuro*/
 
@@ -15,7 +15,7 @@ $color-primary-4: #7E0019; /*fucsia oscuro*/
 
 $rgba-primary-0: rgba(158, 53, 73, 1);	// Main Primary color */
 $rgba-primary-1: rgba(33, 29, 30, 1);
-$rgba-primary-2: rgba(239,148,166, 1);
+$rgba-primary-2: rgba(250,178, 192, 1);
 $rgba-primary-3: rgba(192, 8, 45, 1);
 $rgba-primary-4: rgba(126, 0, 25, 1);
 
