--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -53,6 +53,7 @@ h4{
 }
 p{
 	font-size: $p_size;
+	line-height: 24px;
 	padding: .5em;
 }
 
@@ -150,6 +151,33 @@ header{
 				border: none;
 				border-radius: 4px;
 				display: inline-block;
+			}
+		}
+	}
+}
+
+
+
+/* ---- Portfolio Section ---- */
+#portfolio{
+	color: $color-primary-2;
+	background-color: $color-primary-4;
+	@include paddingSection();
+	.thumbnail{
+		background-color: $color-primary-1;
+		border: none;
+		.caption{
+			color: $color-primary-2;
+			p{
+				font-size: .9em;
+			}
+			.btn-primary {
+				color: #fff;
+				background-color: $color-primary-0;
+				border-color: $color-primary-0;
+				&:hover{
+					background-color: $color-primary-4;
+				}
 			}
 		}
 	}
