--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -43,3 +43,10 @@ $h4_size: 1.2em;
 
 $p_size: 1.2em;
 $a_size: 1em;
+
+
+// Font Familiy */
+
+$font-1: 'Press Start 2P';
+$font-body: 'Play', sans-serif;
+$font-title: 'Share Tech Mono', monospace;
