--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -24,6 +24,7 @@ li{list-style:none}
 
 /* ---- base ---- */
 body{
+	font-family: $font-body;
 	padding: 0;
 	margin: 0;
 	background-color: $color-primary-0;
@@ -43,6 +44,7 @@ h2{
 	@include headerTitle();
 }
 h3{
+	font-family: $font-title;
 	font-size: $h3_size;
 	font-weight: 600;
 	@include paddingSectionTitle();
@@ -84,7 +86,7 @@ header{
 				color: $color-primary-2;
 				font-size: $a_size;
 				font-weight: bold;
-				&:hover, &:active{
+				&:hover{
 					color: $color-primary-2;
 					background-color: $header_bg;
 				}
@@ -96,6 +98,10 @@ header{
 .navbar-default {
 	background-color: $navbar_bg;
 	border-color: transparent;
+	.navbar-nav > .active > a, .navbar-nav > .active > a:focus, .navbar-nav > .active > a:hover{
+		color: $color-primary-2;
+		background-color: $header_bg;
+	}
 }
 
 
