--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5915,6 +5915,29 @@ p {
   line-height: 24px;
   padding: .5em; }
 
+.rounded {
+  border-radius: 5px; }
+
+/* Hover Transform */
+.grow {
+  -webkit-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out; }
+  .grow:hover, .grow:focus {
+    -webkit-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    transform: scale(1.2); }
+
+/* Animations */
+.animation-image.animated {
+  animation-duration: 1.1s;
+  animation-delay: 1.2s; }
+
+.animation-slide.animated {
+  animation-duration: 1.5s; }
+
+.animation-zoom.animated {
+  animation-duration: 1.5s; }
+
 /* ---- Header ---- */
 header {
   height: 100vh; }
@@ -5940,7 +5963,8 @@ header {
     font-weight: bold; }
     .navbar .nav li a:hover {
       color: #FAB2C0;
-      background-color: rgba(192, 8, 45, 0.7); }
+      background-color: #9E3549;
+      border-radius: 10px; }
 
 .navbar-default, #footer {
   background-color: #1f1919;
@@ -5950,7 +5974,8 @@ header {
   box-shadow: 0 1px 10px #211D1E; }
   .navbar-default .navbar-nav > .active > a, #footer .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, #footer .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover, #footer .navbar-nav > .active > a:hover {
     color: #FAB2C0;
-    background-color: rgba(192, 8, 45, 0.7); }
+    background-color: rgba(192, 8, 45, 0.7);
+    border-radius: 10px; }
 
 /* ---- About Section ---- */
 #about {
@@ -5981,17 +6006,26 @@ header {
 #skills {
   color: #7E0019;
   background-color: #FAB2C0;
+  -webkit-box-shadow: inset 0px 11px 8px -10px #7E0019, inset 0px -11px 8px -10px #7E0019;
+  -moz-box-shadow: inset 0px 11px 8px -10px #7E0019, inset 0px -11px 8px -10px #7E0019;
+  box-shadow: inset 0px 11px 8px -10px #7E0019, inset 0px -11px 8px -10px #7E0019;
   padding-top: 3em;
   padding-bottom: 3em; }
   #skills .devicon-container {
-    padding-top: 2.5em;
-    padding-bottom: 2.5em; }
-    #skills .devicon-container i {
-      font-size: 4em;
-      color: #C0082D;
-      padding: 60px; }
-      #skills .devicon-container i:hover {
-        color: #7E0019; }
+    padding-top: 2em;
+    padding-bottom: 2em; }
+    #skills .devicon-container .list-group {
+      margin-bottom: 0; }
+      #skills .devicon-container .list-group .list-group-item {
+        background-color: transparent;
+        border: none;
+        display: inline-block;
+        padding: 20px 80px; }
+        #skills .devicon-container .list-group .list-group-item i {
+          font-size: 4em;
+          color: #C0082D; }
+          #skills .devicon-container .list-group .list-group-item i:hover {
+            color: #7E0019; }
   #skills #other-skills {
     padding-top: 2em;
     padding-bottom: 2em; }
@@ -6008,23 +6042,50 @@ header {
   padding-top: 3em;
   padding-bottom: 3em; }
   #portfolio .thumbnail {
-    background-color: #211D1E;
-    border: none; }
-    #portfolio .thumbnail .caption {
-      color: #FAB2C0; }
-      #portfolio .thumbnail .caption p {
-        font-size: .9em; }
-      #portfolio .thumbnail .caption .btn-primary {
-        color: #fff;
-        background-color: #9E3549;
-        border-color: #9E3549; }
-        #portfolio .thumbnail .caption .btn-primary:hover {
-          background-color: #7E0019; }
+    background-color: #FAB2C0;
+    border: none;
+    -webkit-box-shadow: 0 1px 10px #211D1E;
+    -moz-box-shadow: 0 1px 10px #211D1E;
+    box-shadow: 0 1px 10px #211D1E;
+    /*
+    .caption{
+    	color: $color-primary-2;
+    	p{
+    		font-size: .9em;
+    	}
+    	.btn-primary {
+    		color: #fff;
+    		background-color: $color-primary-0;
+    		border-color: $color-primary-0;
+    		&:hover{
+    			background-color: $color-primary-4;
+    		}
+    	}
+    }
+    */ }
+    #portfolio .thumbnail .dtl27 .dtl {
+      background: rgba(33, 29, 30, 0.7); }
+      #portfolio .thumbnail .dtl27 .dtl h3 {
+        background: #211D1E;
+        color: whitesmoke; }
+      #portfolio .thumbnail .dtl27 .dtl p {
+        color: whitesmoke; }
+      #portfolio .thumbnail .dtl27 .dtl a.btn-primary {
+        color: whitesmoke;
+        background-color: #C0082D;
+        border-color: #C0082D;
+        border-radius: 5px; }
+        #portfolio .thumbnail .dtl27 .dtl a.btn-primary:hover {
+          background-color: #7E0019;
+          border-color: #7E0019; }
 
 /* ---- Contact Section ---- */
 #contact {
   color: #7E0019;
   background-color: #FAB2C0;
+  -webkit-box-shadow: inset 0px 11px 8px -10px #7E0019, inset 0px -11px 8px -10px #7E0019;
+  -moz-box-shadow: inset 0px 11px 8px -10px #7E0019, inset 0px -11px 8px -10px #7E0019;
+  box-shadow: inset 0px 11px 8px -10px #7E0019, inset 0px -11px 8px -10px #7E0019;
   padding-top: 3em;
   padding-bottom: 3em; }
   #contact p {
@@ -6035,9 +6096,11 @@ header {
     border-radius: 4px;
     display: inline-block; }
     #contact .list-group .list-group-item .fa {
-      color: whitesmoke;
+      color: #9E3549;
       font-size: 5em;
       padding: 0 .2em; }
+      #contact .list-group .list-group-item .fa:hover {
+        color: #C0082D; }
 
 /* ---- Footer ---- */
 #footer {
@@ -6046,7 +6109,10 @@ header {
   #footer p {
     font-size: .9em;
     padding: 2em; }
+    #footer p a {
+      color: #FAB2C0; }
 
+/* ---- Particles ---- */
 /* ---- stats.js ---- */
 .count-particles {
   background: #000022;
@@ -6088,6 +6154,9 @@ header {
   background-size: cover;
   background-position: 50% 50%;
   background-repeat: no-repeat;
-  position: relative; }
+  position: relative;
+  -webkit-box-shadow: 0 1px 10px #211D1E;
+  -moz-box-shadow: 0 1px 10px #211D1E;
+  box-shadow: 0 1px 10px #211D1E; }
 
 /*# sourceMappingURL=main.css.map */
