--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -23,6 +23,7 @@ li{list-style:none}
 	========================================================================== */
 
 /* ---- base ---- */
+
 body{
 	font-family: $font-body;
 	padding: 0;
@@ -68,6 +69,36 @@ p{
 	padding: .5em;
 }
 
+.rounded{
+	border-radius: 5px;
+}
+
+/* Hover Transform */
+
+.grow{
+	-webkit-transition: all .2s ease-in-out;
+		transition: all .2s ease-in-out;
+	&:hover, &:focus{
+		-webkit-transform: scale(1.2);
+			-ms-transform: scale(1.2);
+				transform: scale(1.2);
+	}
+}
+
+/* Animations */
+
+.animation-image.animated{
+	animation-duration: 1.1s;
+	animation-delay: 1.2s;
+}
+.animation-slide.animated{
+	animation-duration: 1.5s;
+}
+.animation-zoom.animated{
+	animation-duration: 1.5s;
+}
+
+
 
 /* ---- Header ---- */
 header{
@@ -102,7 +133,8 @@ header{
 				font-weight: bold;
 				&:hover{
 					color: $color-primary-2;
-					background-color: $header_bg;
+					background-color: $color-primary-0;
+					border-radius: 10px;
 				}
 			}
 		}
@@ -119,6 +151,7 @@ header{
 	.navbar-nav > .active > a, .navbar-nav > .active > a:focus, .navbar-nav > .active > a:hover{
 		color: $color-primary-2;
 		background-color: $header_bg;
+		border-radius: 10px;
 	}
 }
 
@@ -162,19 +195,28 @@ header{
 #skills{
 	color: $color-primary-4;
 	background-color: $color-primary-2;
+	@include shadow-section2();
 	@include paddingSection();
 
 	.devicon-container{
-		padding-top: 2.5em;
-		padding-bottom: 2.5em;
-		i{
-			font-size: 4em;
-			color: $color-primary-3;
-			padding: 60px;
-			&:hover{
-				color: $color-primary-4;
+		padding-top: 2em;
+		padding-bottom: 2em;
+		.list-group{
+			margin-bottom: 0;
+			.list-group-item{
+				background-color: transparent;
+				border: none;
+				display: inline-block;
+				padding: 20px 80px;
+				i{
+					font-size: 4em;
+					color: $color-primary-3;
+					&:hover{
+						color: $color-primary-4;
+					}
+				}
 			}
-		}
+		}	
 	}
 
 	#other-skills{
@@ -199,8 +241,34 @@ header{
 	@include paddingSection();
 
 	.thumbnail{
-		background-color: $color-primary-1;
+		background-color: $color-primary-2;
 		border: none;
+		@include shadow-section();
+
+		.dtl27{
+			.dtl{
+				background: rgba(33, 29, 30, 0.7);
+				h3{
+					background: $color-primary-1;
+					color: $white;
+				}
+				p{
+					color: $white;
+				}
+				a.btn-primary{
+					color: $white;
+					background-color: $color-primary-3;
+					border-color: $color-primary-3;
+					border-radius: 5px;
+					&:hover{
+						background-color: $color-primary-4;
+						border-color: $color-primary-4;
+					}
+				}
+			}
+		}
+
+		/*
 		.caption{
 			color: $color-primary-2;
 			p{
@@ -215,6 +283,7 @@ header{
 				}
 			}
 		}
+		*/
 	}
 }
 
@@ -224,6 +293,7 @@ header{
 #contact{
 	color: $color-primary-4;
 	background-color: $color-primary-2;
+	@include shadow-section2();
 	@include paddingSection();
 	p{
 		font-size: 1em;
@@ -235,10 +305,14 @@ header{
 			border: none;
 			border-radius: 4px;
 			display: inline-block;
+
 			.fa{
-				color: $white;
+				color: $color-primary-0;
 				font-size: 5em;
 				padding: 0 .2em;
+				&:hover{
+					color: $color-primary-3;
+				}
 			}
 		}
 	}
@@ -254,11 +328,15 @@ header{
 	p{
 		font-size: .9em;
 		padding: 2em;
+		a{
+			color: $color-primary-2;
+		}
 	}
 }
 
 
 
+/* ---- Particles ---- */
 /* ---- stats.js ---- */
 .count-particles{
 	background: #000022;
@@ -307,4 +385,5 @@ header{
 	background-position: 50% 50%;
 	background-repeat: no-repeat;
 	position: relative;
+	@include shadow-section();
 }
