--- a/assets/sass/_mixin.scss
+++ b/assets/sass/_mixin.scss
@@ -22,3 +22,15 @@
 	padding-top: 2em;
 	padding-bottom: 2em;
 }
+
+@mixin shadow-section(){	
+	-webkit-box-shadow: 0 1px 10px $color-primary-1;
+		-moz-box-shadow: 0 1px 10px $color-primary-1;
+			box-shadow: 0 1px 10px $color-primary-1;
+}
+
+@mixin shadow-section2(){
+	-webkit-box-shadow: inset 0px 11px 8px -10px $color-primary-4, inset 0px -11px 8px -10px $color-primary-4;
+		-moz-box-shadow: inset 0px 11px 8px -10px $color-primary-4, inset 0px -11px 8px -10px $color-primary-4;
+			box-shadow: inset 0px 11px 8px -10px $color-primary-4, inset 0px -11px 8px -10px $color-primary-4;		
+}
