--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -31,6 +31,7 @@ $rgba-primary-4: rgba(126, 0, 25, 1);
 $white: whitesmoke;
 $navbar_bg: #1f1919;
 $header_bg: rgba(192, 8, 45, 0.7);
+$contact_bg: #f9d5dc;
 
 
 
